<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.infusion.maze.MainHomeActivity">

    <RelativeLayout
        android:id="@+id/movement_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/scan_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@+id/up_button"
            android:onClick="scanArea"
            android:text="@string/scan_button" />

        <Button
            android:id="@+id/up_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:onClick="moveOneStepUp"
            android:text="@string/up_button" />

        <Button
            android:id="@+id/down_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@+id/scan_button"
            android:onClick="moveOneStepDown"
            android:text="@string/down_button" />

        <Button
            android:id="@+id/left_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/up_button"
            android:layout_toLeftOf="@+id/scan_button"
            android:onClick="moveOneStepLeft"
            android:text="@string/left_button" />

        <Button
            android:id="@+id/right_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/up_button"
            android:layout_toRightOf="@+id/scan_button"
            android:onClick="moveOneStepRight"
            android:text="@string/right_button" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/system_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="System Controls" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkServerHealth"
                android:text="Health Check" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>